# bazel-examples

.github/workflows/: ci.yaml
js_build_file_generation/: WORKSPACE
migrate_rules_nodejs_4_to_rules_js/: .bazelignore  README.md  WORKSPACE  package.json
migrate_rules_nodejs_4_to_rules_js/bazel/: pnpm-lock.yaml
migrate_rules_nodejs_4_to_rules_js/lib/a/: BUILD.bazel
migrate_rules_nodejs_4_to_rules_js/lib/b/: BUILD.bazel
next.js/: tsconfig.json
next.js/pages/: BUILD.bazel
next.js/pages/api/: BUILD.bazel  hello.ts
